<resources>
    <string name="app_name">Foundryman</string>
    <string name="title_activity_options">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="sprue_type">Sprue type</string>
    <string name="diameter">Dia</string>
    <string name="width">Width</string>
    <string name="sprueHeight">Height</string>
    <string name="factor">Safety Factor [%]</string>
    <string name="flowRate">Mass Flow Rate[kg/s]</string>
    <string name="flowRateImp">Mass Flow Rate [lb/s]</string>
    <string name="sprueDepth">Depth</string>
    <string name="Reset">Reset</string>
    <string name="sprueHelp">
        \tThe Sprue is the vertical part of the running system that in sand
        casting typically connects the pouring basin at the top with further parts of the running
        system. It is crucial to correctly design this element to avoid situations where the sprue
        is either too tapered, increasing metal velocity at the bottom or not tapered enough
        allowing the liquid metal to fall turbulently. Both cases can potentially introduce defects
        in the system.\n\n
        \tThis calculator allows you to calculate the correct dimensions of the sprue based on it\'s
        height and either the top or bottom size. Optionally you can set the required volumetric
        flow rate of the metal with the sprue height (feature to be implemented).\n\n
        \tThe Safety Factor is the percentage value introduced to compensate for any potential flow
        losses in the initial stages of the system. Positive values of the Safety Factor increase
        the taper, choking the metal flow and therefore preventing any potential turbulent flow.
        The default value is 20%</string>
    <string name="feedersTotalWeight">Total Feeder Weight</string>
    <string name="FeedersInsulatedText">Insulated</string>
    <string name="height">Height</string>
    <string name="Insulation">Insulation</string>
    <string name="version">Version 0.1</string>
    <string name="runnerHelp">\tRunner bar is the part of the running system that distributes the
        liquid metal from sprue and well into the in-gates connected to the casting. There are two
        main approaches to designing good runner bar. One is to constrain the metal flow to decrease
        the space where turbulent flow can occur. This approach is commonly paired with l-shape
        sprue-runner junction design or similar constrained design. In this design the runner bar
        is usually slightly pressurized or neutral (see summary tab to check your design ratios). The
        other approach is to have a significantly bigger sprue-runner bar area ratio (around 1:4) to
        slow down the liquid metal below turbulent velocity (0.5m/s). This design is usually paired
        with filters directly after the sprue.\n\n
        \t Setup an values plugged in this tab are used for calculating the system ratio and metal
        yield that can be found in the summary tab.</string>

    <string name="lShapeHelp">This calculator allows you to optimise the sprue - runner junction
        for optimal flow utilising the L-shape design. This geometry allows for the least obstructive
        fluid flow while at the same time reducing turbulence caused by rapid flow direction change
        and high velocity. This shape also considers reasonable mouldability constrains.\n\n
        The main part of the design is the minimum smooth transition radius at the junction,
        calculated based on the metal velocity and main sprue dimensions. This geometry is often
        paired with filters placed directly under the ingates to prevent formation of high velocity
        metal jets when the metal is required to rapidly change flow direction to fill the ingates.</string>

    <string name="about">This app was developed with foundry engineers in mind (professional and home-grown)
        looking to speed up their design process when developing new systems and calculating design
        properties. Please be aware that some of the calculations base on approximations and every
        foundry uses different approach to system design, therefore results may differ from those
        tailor made for your foundry. I do not take responsibility for decisions taken by the reader
        based solely on the information provided in this app.
        \n\nVersion: 0.1
        \nThis is the first release of this app and it may still contain bugs and errors, so feel
        free to let me know if you encounter any problems or have a suggestion for improvement.
        \nAs of now, the project saves do not store the values for feeders. Please bear that in mind
        when working with loaded project and want to analyze the yield od fill time.</string>

    <string name="author">I am a foundry engineer working professionally with light weight alloys in
        defense and airspace industry. I am learning programming and this engineering calculator is
        the first app that I developed. I wanted to develop a tool that I could also use in my
        professional career and I hope that someone else might also find it useful. If you would like
        to share your thoughts on this app please feel free to write to \nrafal.m.urbanek@gmail.com</string>
</resources>
