<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedersActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SprueActivity"
        tools:layout_editor_absoluteX="-34dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/feederDesc10"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="delete"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider28"
            app:layout_constraintTop_toBottomOf="@+id/divider11" />

        <TextView
            android:id="@+id/feederDesc9"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="mass"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/divider30"
            app:layout_constraintTop_toBottomOf="@+id/divider11" />

        <View
            android:id="@+id/divider30"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/divider24"
            app:layout_constraintStart_toEndOf="@+id/feederDesc8"
            app:layout_constraintTop_toBottomOf="@+id/divider22"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/feederDesc8"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="mod"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/divider29"
            app:layout_constraintTop_toBottomOf="@+id/divider11" />

        <View
            android:id="@+id/divider29"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/divider24"
            app:layout_constraintStart_toEndOf="@+id/feederDesc7"
            app:layout_constraintTop_toBottomOf="@+id/divider22"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/feederDesc7"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/height"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/divider27"
            app:layout_constraintTop_toBottomOf="@+id/divider11" />

        <View
            android:id="@+id/divider27"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/divider24"
            app:layout_constraintStart_toEndOf="@+id/feederDesc6"
            app:layout_constraintTop_toBottomOf="@+id/divider22"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/divider26"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/divider24"
            app:layout_constraintStart_toEndOf="@+id/feederDesc5"
            app:layout_constraintTop_toBottomOf="@+id/divider22"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/divider28"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/divider24"
            app:layout_constraintStart_toEndOf="@+id/feederDesc9"
            app:layout_constraintTop_toBottomOf="@+id/divider22"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/feederDesc5"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/Insulation"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/divider25"
            app:layout_constraintTop_toBottomOf="@+id/divider11" />

        <TextView
            android:id="@+id/feederDesc6"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/diameter"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/divider26"
            app:layout_constraintTop_toBottomOf="@+id/divider11" />

        <View
            android:id="@+id/divider24"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feederDesc2" />

        <View
            android:id="@+id/divider22"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/feederDesc4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="ammount"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/divider11"
            app:layout_constraintEnd_toEndOf="@+id/feederDesc3"
            app:layout_constraintStart_toStartOf="@+id/feederDesc3"
            app:layout_constraintTop_toBottomOf="@+id/feederDesc3" />

        <TextView
            android:id="@+id/feederDesc3"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:layout_marginEnd="120dp"
            android:gravity="center"
            android:text="@string/Insulation"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/feederAmmountField2"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/divider6"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/feederDesc"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/height"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/divider11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feederDesc1" />

        <EditText
            android:id="@+id/feederAmmountField3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/feederDesc"
            app:layout_constraintEnd_toEndOf="@+id/feederAmmountField2"
            app:layout_constraintStart_toEndOf="@+id/feederDesc1"
            app:layout_constraintTop_toTopOf="@+id/feederDesc" />

        <EditText
            android:id="@+id/feederAmmountField2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/feederDesc"
            app:layout_constraintEnd_toStartOf="@+id/feederDesc3"
            app:layout_constraintStart_toEndOf="@+id/feederDesc1"
            app:layout_constraintTop_toBottomOf="@+id/divider6" />

        <TextView
            android:id="@+id/feederDesc1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/diameter"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider6" />

        <View
            android:id="@+id/divider11"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/summaryTxtFeeders"
            android:layout_width="0sp"
            android:layout_height="40sp"
            android:text="FEEDERS"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <EditText
            android:id="@+id/projectNameTxt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="Project name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintEnd_toStartOf="@+id/MainOptionsBtn"
            app:layout_constraintStart_toEndOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="120dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/MainOptionsBtn"
            android:layout_width="50dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_manage" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <View
            android:id="@+id/divider6"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summaryTxtFeeders" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/FeederRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/divider20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider24" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider6"
            app:srcCompat="@android:drawable/ic_input_add" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/feedersTotalWeight"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="0"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <View
            android:id="@+id/divider20"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/feederDesc2"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="no. of"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider11" />

        <Button
            android:id="@+id/feederInsulatedBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/FeedersInsulatedText"
            app:layout_constraintBottom_toBottomOf="@+id/feederDesc3"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/feederDesc3"
            app:layout_constraintTop_toBottomOf="@+id/divider6"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/feederAmmountField"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/divider11"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/feederDesc2"
            app:layout_constraintTop_toTopOf="@+id/feederDesc2" />

        <View
            android:id="@+id/divider25"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/divider24"
            app:layout_constraintStart_toEndOf="@+id/feederDesc2"
            app:layout_constraintTop_toBottomOf="@+id/divider22" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>